cabal-version:       2.0

name:                ask
version:             0.1.0.0
synopsis:            User input helpers for console applications
description:         For when getLine doesn't quite cut it, but using ncurses/brick/etc. is overkill.
homepage:            https://github.com/valderman/ask
license:             MIT
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            System
build-type:          Simple

library
  exposed-modules:
    System.Console.Ask
  other-modules:
    System.Console.Ask.FreeText
    System.Console.Ask.Menu
    System.Console.Ask.YesNo
  build-depends:
    base          >=4.8   && <5,
    ansi-terminal ^>=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
